# mpi-bouabdallah

./: CMakeLists.txt  README.md  file.c  main.c
